Creacion Tabla Restaurant

--- a/bookingrestaurante_Api/src/main/resources/application.properties
+++ b/bookingrestaurante_Api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Importante para que se comunique con la base de datos
 # Configuración de la base de datos PostgresoL
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookingrestaurante
+spring.datasource.url=jdbc:postgresql://localhost:5432/booking_Restaurante
 spring.datasource.username=postgres
 spring.datasource.password=paolo
 spring.datasource.driver-class-name=org.postgresql.Driver
